# agency-voice-interface

./: .cursorrules  .env.sample  .gitignore  .pre-commit-config.yaml  IDEAS.md  README.md  personalization.json  pyproject.toml
AI_DOCS/: event_docs.md  js_implementation.md  realtime_api_docs.md
src/realtime_api_async_python/: agency_functions.py  audio.py  config.py  decorators.py  functions.py  main.py  microphone.py  models.py  utils.py  websocket_handler.py
src/realtime_api_async_python/audio/: bidirectional_audio.py
src/realtime_api_async_python/tools/: CreateFileTool.py  DeleteFileTool.py  GetCurrentTime.py  OpenBrowser.py  UpdateFileTool.py  __init__.py  utils.py
src/voice_assistant/: audio.py  config.py  decorators.py  main.py  microphone.py  models.py  test_realtime_connection.py  utils.py  visual_interface.py  websocket_handler.py
src/voice_assistant/agencies/: __init__.py
src/voice_assistant/agencies/DemoDeveloperAgency/: agency.py  agency_manifesto.md
src/voice_assistant/agents/: __init__.py  agency_functions.py
src/voice_assistant/agents/Developer/: agency.py
src/voice_assistant/tools/: CreateFile.py  CreateFileTool.py  DeleteFile.py  DeleteFileTool.py  DraftGmail.py  FetchDailyMeetingSchedule.py  GetCurrentDateTime.py  GetCurrentTime.py  GetGmailSummary.py  GetMeetingAgenda.py  GetResponse.py  GetScreenDescription.py  OpenBrowser.py  ScreenshotAnalysisTool.py  SendMessage.py  SendMessageAsync.py  UpdateFile.py  UpdateFileTool.py  __init__.py  utils.py
src/voice_assistant/utils/: calendar_utils.py  decorators.py  gmail_utils.py  google_services_utils.py  llm_utils.py  log_utils.py
(+19 files in other folders)
