[project]
name = "realtime-api-async-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agency-swarm>=0.3.0",
    "numpy",
    "openai",
    "pyaudio",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project.scripts]
main = "realtime_api_async_python.main:main"
