[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agency-swarm>=0.3.0",
    "numpy",
    "openai",
    "pyaudio",
    "pygame>=2.6.1",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project.scripts]
main = "voice_assistant.main:main"
